Fixed display bug on iOS

--- a/css/common.css
+++ b/css/common.css
@@ -158,7 +158,7 @@ header .menu li {
   transition: width 0.25s ease-in;
 }
 
-.menu_icon {
+#menu_icon {
   display: none;
   float: right;
   width: 22px;
@@ -169,17 +169,17 @@ header .menu li {
   padding: 5px;
 }
 @media screen and (max-width: 480px) {
-  .menu_icon {
+  #menu_icon {
     display: block;
     z-index: 99;
   }
 }
-.menu_icon div {
+#menu_icon div {
   height: 3px;
-  margin-bottom: 5px;;
+  margin-bottom: 5px;
   background-color: #000;
 }
-.menu_icon div:last-child { margin-bottom: 0; }
+#menu_icon div:last-child { margin-bottom: 0; }
 
 
 /* shutter menu --------------------------------------------------*/
@@ -188,7 +188,7 @@ header .menu li {
   display: none;
   position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
 }
 @media screen and (min-width: 480px){
   .menu_shutter {
@@ -197,15 +197,19 @@ header .menu li {
 }
 
 .menu_shutter .menu {
-  width: 100%;
-  position: absolute;
+  /*width: 100%;*/
+  position: relative;
   top: 50%;
+  z-index: 1;
+  opacity: 0;
+  transform: translateX(30px);
+  transition: transform 0.2s ease-out;
 }
 
 .menu_shutter .menu li {
   display: block;
   text-align: center;
-  font-size: 0.875rem;
+  font-size: 1.125rem;
   margin-bottom: 15px;
 }
 .menu_shutter .menu li:last-child { margin-bottom: 0; }
@@ -215,8 +219,15 @@ header .menu li {
 }
 
 .bg_shutter {
+  position: absolute;
+  left: 0;
   width: 100%;
-  height: 100%;
+  height: 0;
+  transform: skewY(45deg);
+  -webkit-transition: all 0.35s ease-out;
+  -moz-transition: all 0.35s ease-out;
+  -os-transition: all 0.35s ease-out;
+  transition: top 0.35s ease-out;
   background-color: rgba(255, 255, 255, 1);
 }
 
